dropdown margin fix, but with datepicker overlap

--- a/app/sass/components/_dropdown.scss
+++ b/app/sass/components/_dropdown.scss
@@ -42,10 +42,10 @@
   .dropdown_content {
     margin-left: -15px;
     position: absolute;
-    width: 33%;
+    width: 141px;
     z-index: 200;
     padding-top: 30px;
-    margin-top: -40px;
+    margin-top: -43px;
     background-color: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 
